[gd_scene load_steps=10 format=3 uid="uid://bl5husybo5s2r"]

[ext_resource type="Script" path="res://screenreader/menu/base_menu.gd" id="1_bx15o"]
[ext_resource type="Theme" uid="uid://cs1vqepidtt1a" path="res://screenreader/ui/style/Access.tres" id="2_3qw7s"]
[ext_resource type="Script" path="res://screenreader/scripts/object_scripts/ax_control.gd" id="3_lvgwa"]
[ext_resource type="Texture2D" uid="uid://olyxlpqj6df1" path="res://screenreader/ui/gradient/AccessDefault.tres" id="4_pnw2u"]
[ext_resource type="Texture2D" uid="uid://bl88nqyr458nl" path="res://screenreader/ui/img/default/x_box.png" id="5_ekyef"]
[ext_resource type="Script" path="res://screenreader/scripts/object_scripts/ax_button.gd" id="5_k62w1"]
[ext_resource type="Script" path="res://screenreader/menu/ax/scripts/ax_title_label.gd" id="5_ri622"]

[sub_resource type="Theme" id="Theme_c7y4r"]
default_font_size = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h8ca2"]
content_margin_left = 20.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0

[node name="BaseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bx15o")
centered = true

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.545098)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 0
offset_right = 616.0
offset_bottom = 494.0
theme = ExtResource("2_3qw7s")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_right = 300.0
offset_bottom = 478.0
grow_horizontal = 2

[node name="Title" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
mouse_filter = 2
script = ExtResource("3_lvgwa")
focus_marked_container = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBox/Title"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Panel/VBox/Title/HBoxContainer"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Center" type="CenterContainer" parent="Panel/VBox/Title/HBoxContainer/ColorRect"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleGradient" type="TextureRect" parent="Panel/VBox/Title/HBoxContainer/ColorRect/Center"]
custom_minimum_size = Vector2(602, 42)
layout_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
texture = ExtResource("4_pnw2u")

[node name="Grid" type="HBoxContainer" parent="Panel/VBox/Title/HBoxContainer/ColorRect"]
custom_minimum_size = Vector2(590, 50)
layout_mode = 0
offset_right = 590.0
offset_bottom = 50.0

[node name="Label" type="Label" parent="Panel/VBox/Title/HBoxContainer/ColorRect/Grid"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = SubResource("Theme_c7y4r")
theme_override_styles/normal = SubResource("StyleBoxEmpty_h8ca2")
text = "Test Label Content"
clip_text = true
script = ExtResource("5_ri622")

[node name="EndButtons" type="Control" parent="Panel/VBox/Title/HBoxContainer/ColorRect/Grid"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
script = ExtResource("3_lvgwa")
focus_marked_container = true

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/Title/HBoxContainer/ColorRect/Grid/EndButtons"]
clip_contents = true
custom_minimum_size = Vector2(190, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_bottom = 50.0
grow_horizontal = 0
alignment = 2

[node name="Close" type="Button" parent="Panel/VBox/Title/HBoxContainer/ColorRect/Grid/EndButtons/HBox"]
layout_mode = 2
icon = ExtResource("5_ekyef")
flat = true
icon_alignment = 1
script = ExtResource("5_k62w1")
alt_text = "Close"

[node name="Content" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(600, 350)
layout_mode = 2
script = ExtResource("3_lvgwa")
focus_marked_container = true

[node name="Center" type="CenterContainer" parent="Panel/VBox/Content"]
custom_minimum_size = Vector2(600, 350)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="PanelContainer" parent="Panel/VBox/Content/Center"]
custom_minimum_size = Vector2(590, 340)
layout_mode = 2

[node name="Contents" type="Control" parent="Panel/VBox/Content/Center/Panel"]
layout_mode = 2
script = ExtResource("3_lvgwa")
focus_marked_container = true

[node name="BottomControls" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(600, 70)
layout_mode = 2
script = ExtResource("3_lvgwa")
focus_marked_container = true

[node name="Center" type="CenterContainer" parent="Panel/VBox/BottomControls"]
custom_minimum_size = Vector2(600, 70)
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="PanelContainer" parent="Panel/VBox/BottomControls/Center"]
custom_minimum_size = Vector2(590, 50)
layout_mode = 2

[node name="Grid" type="GridContainer" parent="Panel/VBox/BottomControls/Center/Panel"]
custom_minimum_size = Vector2(580, 50)
layout_mode = 2
columns = 2

[node name="Content" type="Control" parent="Panel/VBox/BottomControls/Center/Panel/Grid"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
script = ExtResource("3_lvgwa")
focus_marked_container = true

[node name="EndButtons" type="Control" parent="Panel/VBox/BottomControls/Center/Panel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_lvgwa")
focus_marked_container = true

[node name="HBox" type="HBoxContainer" parent="Panel/VBox/BottomControls/Center/Panel/Grid/EndButtons"]
clip_contents = true
custom_minimum_size = Vector2(320, 50)
layout_mode = 0
offset_right = 150.0
offset_bottom = 40.0
alignment = 2

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="pressed" from="Panel/VBox/Title/HBoxContainer/ColorRect/Grid/EndButtons/HBox/Close" to="." method="_on_close_pressed"]
